apps/gitea/deployment.yaml
# Source: gitea/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  labels:
    app.kubernetes.io/name: gitea
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: gitea
  template:
    metadata:
      # annotations:
      #   instrumentation.opentelemetry.io/inject-go: "true"
      #   instrumentation.opentelemetry.io/otel-go-auto-target-exe: "/app/gitea/gitea"
      labels:
        sidecar.istio.io/inject: "true"
        app.kubernetes.io/name: gitea
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: gitea
          image: gitea/gitea:1.25.0-rc0-rootless
          imagePullPolicy: IfNotPresent
          # Required for otel injection
          # securityContext:
          #   privileged: true
          #   runAsUser: 0
          ports:
            - name: ssh
              containerPort: 22
            - name: http
              containerPort: 3000
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 200
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 10
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: gitea-data
              mountPath: /data
              subPath: data
            # --- Change this mount to use the emptyDir ---
            - name: gitea-config-writable # Mount the writable emptyDir here
              mountPath: /data/gitea/conf
              # readOnly: false # Not needed for emptyDir, it's writable by default
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
      volumes:
        - name: gitea-data
          persistentVolumeClaim:
            claimName: gitea-data
        - name: gitea-config-secret
          secret:
            secretName: gitea-app-ini
        # --- Add the emptyDir volume ---
        - name: gitea-config-writable # Define the writable emptyDir
          emptyDir: {}           
        - name: temp
          emptyDir: {}
