apps/gitea/service.yaml
# Source: gitea/templates/gitea/gitea-http-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  labels:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/component: http
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app.kubernetes.io/name: gitea
---
# Source: gitea/templates/gitea/gitea-ssh-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
  labels:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/component: ssh
spec:
  type: ClusterIP
  ports:
    - name: ssh
      port: 22
      targetPort: ssh
  selector:
    app.kubernetes.io/name: gitea
