apps/gitea/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: gitea-http-virtualservice
spec:
  hosts:
    - gitea.home.alden.ai
  gateways:
    - istio-system/default-https-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: gitea
            port:
              number: 3000
---
# SSH VirtualService
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gitea-ssh
spec:
  hosts:
    - "gitea.home.alden.ai"  # Or specify your Git domain
  gateways:
    - gitea-ssh-gateway
  tcp:
    - match:
        - port: 22
      route:
        - destination:
            host: gitea-ssh  # Your Gitea service name
            port:
              number: 22  # SSH port in your Gitea service
